--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
+# BingChat https://github.com/cook4me/android
+android.useNewApkCreator=true
 # Bard
-android.experimental.testOptions.emulatorSnapshots.maxSnapshotsForTestFailures=0
+# android.experimental.testOptions.emulatorSnapshots.maxSnapshotsForTestFailures=0
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
