--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # BingChat https://github.com/cook4me/android
-android.useNewApkCreator=true
+# deprecated gradle 8.0
+# android.useNewApkCreator=true
 # Bard
 # android.experimental.testOptions.emulatorSnapshots.maxSnapshotsForTestFailures=0
 # Project-wide Gradle settings.
